--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8d76d28f-fc7a-4191-807f-e5ee04783ad4",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "2d93b740-276b-44b9-b423-86d4f8101761",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "df9cb616-4469-41a8-839d-de8ada24c158",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "de403f16-c7d0-4e94-94a3-98b9c3658019",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
        "Name: overview, Length: 4803, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "84d08778-3f29-4b33-a470-20a55f4bf591",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
        "(4803, 24)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "de5e0a4c-d671-4938-9cb2-c4c216f927bd",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "e16dac52-c230-4f5e-9e24-d4446231a9c7",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "8750ad3e-ffd7-425c-9262-307ce91d6d85",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "fe337859-02bc-4624-adba-d81bfbe31686",
    "metadata": {},
    "outputs": [],
@@ -440,8 +440,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d75de073-a2d5-401c-b3a3-47e8a987666b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index                      0\n",
+       "budget                     0\n",
+       "genres                     0\n",
+       "homepage                3091\n",
+       "id                         0\n",
+       "keywords                   0\n",
+       "original_language          0\n",
+       "original_title             0\n",
+       "overview                   3\n",
+       "popularity                 0\n",
+       "production_companies       0\n",
+       "production_countries       0\n",
+       "release_date               1\n",
+       "revenue                    0\n",
+       "runtime                    2\n",
+       "spoken_languages           0\n",
+       "status                     0\n",
+       "tagline                    0\n",
+       "title                      0\n",
+       "vote_average               0\n",
+       "vote_count                 0\n",
+       "cast                       0\n",
+       "crew                       0\n",
+       "director                   0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b6268780-ee00-4295-a12b-c8d2d1e4eb10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combining all the 5 selected features\n",
+    "\n",
+    "combined_features = movies_data['genres']+' '+movies_data['keywords']+' '+movies_data['tagline']+' '+movies_data['cast']+' '+movies_data['director']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fb18c59d-b7b3-4b2c-bc09-9b3ca390876c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Action Adventure Fantasy Science Fiction cultu...\n",
+       "1       Adventure Fantasy Action ocean drug abuse exot...\n",
+       "2       Action Adventure Crime spy based on novel secr...\n",
+       "3       Action Crime Drama Thriller dc comics crime fi...\n",
+       "4       Action Adventure Science Fiction based on nove...\n",
+       "                              ...                        \n",
+       "4798    Action Crime Thriller united states\\u2013mexic...\n",
+       "4799    Comedy Romance  A newlywed couple's honeymoon ...\n",
+       "4800    Comedy Drama Romance TV Movie date love at fir...\n",
+       "4801      A New Yorker in Shanghai Daniel Henney Eliza...\n",
+       "4802    Documentary obsession camcorder crush dream gi...\n",
+       "Length: 4803, dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e8e5d1e1-b5b4-41a9-8962-0ac8d2c7238b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# converting the text data to feature vectors\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "86f7c074-f3a3-43ac-9952-e0a708cd2164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_vectors = vectorizer.fit_transform(combined_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c616f510-bd0d-4278-bc21-3506f976266e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 201)\t0.07860022416510505\n",
+      "  (0, 274)\t0.09021200873707368\n",
+      "  (0, 5274)\t0.11108562744414445\n",
+      "  (0, 13599)\t0.1036413987316636\n",
+      "  (0, 5437)\t0.1036413987316636\n",
+      "  (0, 3678)\t0.21392179219912877\n",
+      "  (0, 3065)\t0.22208377802661425\n",
+      "  (0, 5836)\t0.1646750903586285\n",
+      "  (0, 14378)\t0.33962752210959823\n",
+      "  (0, 16587)\t0.12549432354918996\n",
+      "  (0, 3225)\t0.24960162956997736\n",
+      "  (0, 14271)\t0.21392179219912877\n",
+      "  (0, 4945)\t0.24025852494110758\n",
+      "  (0, 15261)\t0.07095833561276566\n",
+      "  (0, 16998)\t0.1282126322850579\n",
+      "  (0, 11192)\t0.09049319826481456\n",
+      "  (0, 11503)\t0.27211310056983656\n",
+      "  (0, 13349)\t0.15021264094167086\n",
+      "  (0, 17007)\t0.23643326319898797\n",
+      "  (0, 17290)\t0.20197912553916567\n",
+      "  (0, 13319)\t0.2177470539412484\n",
+      "  (0, 14064)\t0.20596090415084142\n",
+      "  (0, 16668)\t0.19843263965100372\n",
+      "  (0, 14608)\t0.15150672398763912\n",
+      "  (0, 8756)\t0.22709015857011816\n",
+      "  :\t:\n",
+      "  (4801, 403)\t0.17727585190343229\n",
+      "  (4801, 4835)\t0.24713765026964\n",
+      "  (4801, 17266)\t0.28860981849329476\n",
+      "  (4801, 13835)\t0.27870029291200094\n",
+      "  (4801, 13175)\t0.28860981849329476\n",
+      "  (4801, 17150)\t0.3025765103586468\n",
+      "  (4801, 3511)\t0.3025765103586468\n",
+      "  (4801, 13948)\t0.3025765103586468\n",
+      "  (4801, 7269)\t0.3025765103586468\n",
+      "  (4802, 11161)\t0.17867407682173203\n",
+      "  (4802, 4518)\t0.16784466610624255\n",
+      "  (4802, 2129)\t0.3099656128577656\n",
+      "  (4802, 4980)\t0.16078053641367315\n",
+      "  (4802, 6155)\t0.18056463596934083\n",
+      "  (4802, 3436)\t0.21753405888348784\n",
+      "  (4802, 4528)\t0.19504460807622875\n",
+      "  (4802, 1316)\t0.1960747079005741\n",
+      "  (4802, 12989)\t0.1696476532191718\n",
+      "  (4802, 4371)\t0.1538239182675544\n",
+      "  (4802, 6417)\t0.21753405888348784\n",
+      "  (4802, 4608)\t0.24002350969074696\n",
+      "  (4802, 2425)\t0.24002350969074696\n",
+      "  (4802, 3654)\t0.262512960498006\n",
+      "  (4802, 5367)\t0.22969114490410403\n",
+      "  (4802, 6996)\t0.5700048226105303\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(feature_vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8d7d7c7-9684-4c01-962c-09425cdbaeba",
    "metadata": {},
    "outputs": [],
    "source": []
